2025-11-21T00:59:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19556319783 # 815
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-21
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 680 1074 / 684 1078
* notice: next accum: outdated-unq outdated-all / unq all: 680 1074 / 685 1079
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-20]

2025-11-15T00:58:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19381830268 # 809
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-15
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 680 1074 / 683 1077
* notice: next accum: outdated-unq outdated-all / unq all: 680 1074 / 684 1078
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-14]

2025-11-14T01:00:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19350771728 # 808
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-14
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 679 1073 / 683 1077
* notice: next accum: outdated-unq outdated-all / unq all: 680 1074 / 683 1077
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-30] / []

2025-11-13T01:00:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19316936878 # 807