@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-21T00:59:17Z",
-  "count_outdated" : 1074,
-  "uniques_outdated" : 680,
+  "timestamp" : "2025-11-24T01:04:06Z",
+  "count_outdated" : 1075,
+  "uniques_outdated" : 681,
   "count" : 1079,
   "uniques" : 685,
   "clones" : [
-    {
-      "timestamp": "2025-11-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-10T00:00:00Z",
       "count": 1,
